--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
     ]
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^0.11.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "envalid": "^7.3.1",
+    "ethers": "5.7.2",
     "preact": "^10.12.1",
-    "valtio": "^1.10.2"
+    "valtio": "^1.10.2",
+    "wagmi": "^0.11.5"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@preact/preset-vite": "^2.5.0",
     "@types/node": "^18.13.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
@@ -46,6 +51,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "react-scripts": "^5.0.1",
+    "rollup-plugin-polyfill-node": "^0.12.0",
     "rollup-plugin-visualizer": "^5.9.0",
     "tailwindcss": "^3.2.6",
     "tailwindcss-classnames": "^3.0.7",
